# BetterVoiceMessage

.github/workflows/: main.yml
better_voide_message/: README.md  pubspec.yaml
better_voide_message/android/app/: build.gradle
better_voide_message/android/app/src/main/: AndroidManifest.xml
better_voide_message/ios/Runner/: Info.plist
better_voide_message/ios/Runner.xcodeproj/: project.pbxproj
better_voide_message/lib/: main.dart
better_voide_message/lib/llm/: available_models.dart  available_providers.dart  perplexity_provider.dart
better_voide_message/lib/settings/: settings_model.dart  settings_screen.dart
better_voide_message/linux/: CMakeLists.txt
better_voide_message/linux/runner/: my_application.cc
better_voide_message/macos/Flutter/: GeneratedPluginRegistrant.swift
better_voide_message/macos/Runner.xcodeproj/: project.pbxproj
better_voide_message/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
better_voide_message/macos/Runner/Configs/: AppInfo.xcconfig
better_voide_message/test/: widget_test.dart
better_voide_message/web/: index.html  manifest.json
better_voide_message/windows/: CMakeLists.txt
better_voide_message/windows/runner/: Runner.rc  main.cpp
voice_message_backend/: .env.example  .gitignore  DOCKERFILE  README.md  pyproject.toml
voice_message_backend/ell_store/: ell.db
voice_message_backend/voice_message_backend/: main.py
voice_message_backend/voice_message_backend/ai/: __init__.py  clients.py  messageProcessing.py
(+1 files in other folders)
